--- a/campaign/self-scan.html
+++ b/campaign/self-scan.html
@@ -1,24 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Self Scanning</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="icon" href="../img/awhl.svg">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="icon" href="../img/awhl.svg" />
 
-<!-- Tambahkan library html5-qrcode -->
-<script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+    <!-- Tambahkan library Instascan -->
+    <script
+      src="https://unpkg.com/html5-qrcode"
+      type="text/javascript"
+    ></script>
 
-<style>
-    body {
+    <style>
+      body {
         display: flex;
         flex-direction: column;
         width: 100vw;
         height: 100vh;
         margin: 0;
-    }
-    header {
+      }
+      header {
         height: 10vh;
         display: flex;
         flex-direction: column;
@@ -26,15 +29,15 @@
         justify-content: center;
         gap: 0px;
         padding: 8px;
-    }
-    main {
+      }
+      main {
         margin: 0;
         display: flex;
         flex-direction: row;
         height: 100vh;
         width: 100vw;
-    }
-    .left-column {
+      }
+      .left-column {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -43,61 +46,61 @@
         width: 40vw;
         text-align: center;
         gap: 32px;
-    }
-    .event-title {
+      }
+      .event-title {
         display: flex;
         flex-direction: column;
         gap: 8px;
-    }
-    #announcement {
+      }
+      #announcement {
         font-size: 40px;
-    }
-    .input-manual {
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            gap: 8px;
-        }
-        .input-manual input {
-            flex-grow: 1;
-        }
-    .result {
+      }
+      .input-manual {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        gap: 8px;
+      }
+      .input-manual input {
+        flex-grow: 1;
+      }
+      .result {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 32px;
         transition: all 0.5s ease-in-out;
-    }
-    .result img {
+      }
+      .result img {
         width: 50px;
-    }
-    .result-text {
+      }
+      .result-text {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         gap: 8px;
-    }
-    #ticketCode {
+      }
+      #ticketCode {
         font-size: 32px;
-    }
-    #thankyou {
+      }
+      #thankyou {
         font-size: 40px;
-    }
-    #timer {
+      }
+      #timer {
         font-size: 10px;
         text-align: center;
-    }
-    .right-column {
+      }
+      .right-column {
         flex-grow: 1;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 60vw;
-    }
-    #popup {
+      }
+      #popup {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -105,18 +108,17 @@
         width: 100vw;
         background-color: white;
         filter: invert(100);
-    }
-    .camera-arrow {
+      }
+      .camera-arrow {
         display: flex;
         flex-direction: row;
         align-items: center;
         gap: 8px;
-    }
-</style>
+      }
+    </style>
+  </head>
 
-</head>
-
-<body>
+  <body>
     <!-- <header id="popup">
         <div class="camera-arrow">
             <p>Camera</p>
@@ -126,133 +128,159 @@
         <p>Put your phone in front of the camera to scan your QR code to enter the event</p>
     </header> -->
     <main>
-        <section class="left-column">
-            <img src="../img/awhl.svg" alt="">
-            <div class="event-title">
-                <h1>Brand Yearly Anniversary</h1>
-                <h2>1 November 2024 : 7.00 PM - 10.00 PM</h2>
-                </div>
-            <p id="announcement">Self Scanning Ticket</p>
-            <div class="input-manual" id="manual-div">
-                <input id="manualInput" type="string" placeholder="Enter Ticket Code">
-                <button class="buttonPrimary" onclick="confirmTicket(document.getElementById('manualInput').value); document.getElementById('ticketCode').innerText = manualInput.value;">Submit</button>
-            </div>
-            <div class="result" id="result-success" style="display: none;">
-                <h2 id="thankyou">Thank you, enjoy the event</h2>
-                <img src="../img/tick.svg" alt="">
-                <div class="result-text">
-                    <p>Ticket code</p>
-                    <h2 id="ticketCode-success"></h2>
-                    <h2 id="ticketHolder">Customer Name</h2>
-                    <p>successfully registered</p>
-                </div>
-                <p id="timer">this info will be disappear automatically in 3s</p>
-            </div>
-            <div class="result" id="result-failed" style="display: none;">
-                <h2 id="thankyou">Something error happens</h2>
-                <img src="../img/question.svg" alt="">
-                <div class="result-text">
-                    <h2 id="ticketCode-failed"></h2>
-                    <p>Not found in the list</p>
-                    <h2 id="ticketHolder">Wrong ticket / wrong event</h2>
-                </div>
-                <p id="timer">this info will be disappear automatically in 3s</p>
-            </div>
-        </section>
-        <section class="right-column">
-            <div id="preview" style="width: 640px; min-height: 100px;"></div> <!-- Preview kamera akan tampil di sini -->
-        </section>
+      <section class="left-column">
+        <img src="../img/awhl.svg" alt="" />
+        <div class="event-title">
+          <h1>Brand Yearly Anniversary</h1>
+          <h2>1 November 2024 : 7.00 PM - 10.00 PM</h2>
+        </div>
+        <p id="announcement">Self Scanning Ticket</p>
+        <div class="input-manual" id="manual-div">
+          <input
+            id="manualInput"
+            type="string"
+            placeholder="Enter Ticket Code"
+          />
+          <button
+            class="buttonPrimary"
+            onclick="confirmTicket(document.getElementById('manualInput').value); document.getElementById('ticketCode').innerText = manualInput.value;"
+          >
+            Submit
+          </button>
+        </div>
+        <div class="result" id="result-success" style="display: none">
+          <h2 id="thankyou">Thank you, enjoy the event</h2>
+          <img src="../img/tick.svg" alt="" />
+          <div class="result-text">
+            <p>Ticket code</p>
+            <h2 id="ticketCode-success"></h2>
+            <h2 id="ticketHolder">Customer Name</h2>
+            <p>successfully registered</p>
+          </div>
+          <p id="timer">this info will be disappear automatically in 3s</p>
+        </div>
+        <div class="result" id="result-failed" style="display: none">
+          <h2 id="thankyou">Something error happens</h2>
+          <img src="../img/question.svg" alt="" />
+          <div class="result-text">
+            <h2 id="ticketCode-failed"></h2>
+            <p>Not found in the list</p>
+            <h2 id="ticketHolder">Wrong ticket / wrong event</h2>
+          </div>
+          <p id="timer">this info will be disappear automatically in 3s</p>
+        </div>
+      </section>
+      <section class="right-column">
+        <div id="preview" style="width: 500px; min-height: 100px"></div>
+        <!-- Preview kamera akan tampil di sini -->
+      </section>
     </main>
-</body>
-<script>
+  </body>
+  <script>
     let html5QrCode = new Html5Qrcode("preview");
     let currentCameraIndex = 0; // Index for the currently used camera
     let cameras = []; // Array to store all detected cameras
 
     // Event listener when a QR code is successfully scanned
     function onScanSuccess(content) {
-        confirmTicket(content)
+      confirmTicket(content);
     }
 
     // Function to handle scan failures (optional)
     function onScanFailure(error) {
-        console.warn(`QR Code scan failed: ${error}`);
+      console.warn(`QR Code scan failed: ${error}`);
     }
 
     async function confirmTicket(ticketCode) {
-      console.log('QR Code detected: ', ticketCode);
-      document.getElementById('manualInput').value = ticketCode;
-      document.getElementById('ticketCode-success').innerText = ticketCode;
-      document.getElementById('ticketCode-failed').innerText = ticketCode;
-      const data = new FormData()
-      data.set('ticket_id', ticketCode)
-      const url = "https://mb-booking-sit.awellness.sg/api/admin/campaign/event/confirmation";
+      console.log("QR Code detected: ", ticketCode);
+      document.getElementById("manualInput").value = ticketCode;
+      document.getElementById("ticketCode-success").innerText = ticketCode;
+      document.getElementById("ticketCode-failed").innerText = ticketCode;
+      const data = new FormData();
+      data.set("ticket_id", ticketCode);
+      const url =
+        "https://mb-booking-sit.awellness.sg/api/admin/campaign/event/confirmation";
       try {
         const response = await fetch(url, {
           method: "PUT",
-          body: data
+          body: data,
         });
         if (!response.ok) {
           throw new Error(`Response status: ${response.status}`);
         }
         const json = await response.json();
         console.log(json);
-        showResultSuccess();  // Call the result display function
+        showResultSuccess(); // Call the result display function
       } catch (error) {
-        showResultFailed();  // Call the result display function
+        showResultFailed(); // Call the result display function
         console.error(error.message);
       }
     }
 
     // Fetch available cameras and start with the back camera if available
-    Html5Qrcode.getCameras().then(function(cameraList) {
+    Html5Qrcode.getCameras()
+      .then(function (cameraList) {
         cameras = cameraList; // Store the list of cameras
         if (cameras.length > 0) {
-            // Look for the back camera
-            let backCamera = cameras.find(cam => cam.label.toLowerCase().includes('back'));
-            if (backCamera) {
-                html5QrCode.start(backCamera.id, {
-                    fps: 10,    // Scans per second
-                    qrbox: 250  // Display scanning box of 250px
-                }, onScanSuccess, onScanFailure);  // Start with the back camera if found
-            } else {
-                html5QrCode.start(cameras[0].id, {
-                    fps: 10,
-                    qrbox: 250
-                }, onScanSuccess, onScanFailure);  // Use the first camera if no back camera is found
-            }
+          // Look for the back camera
+          let backCamera = cameras.find((cam) =>
+            cam.label.toLowerCase().includes("back"),
+          );
+          if (backCamera) {
+            html5QrCode.start(
+              backCamera.id,
+              {
+                fps: 10, // Scans per second
+                qrbox: 250, // Display scanning box of 250px
+              },
+              onScanSuccess,
+              onScanFailure,
+            ); // Start with the back camera if found
+          } else {
+            html5QrCode.start(
+              cameras[0].id,
+              {
+                fps: 10,
+                qrbox: 250,
+              },
+              onScanSuccess,
+              onScanFailure,
+            ); // Use the first camera if no back camera is found
+          }
         } else {
-            alert('No cameras found. Please ensure your camera is connected.');
-            console.error('No cameras found.');
+          alert("No cameras found. Please ensure your camera is connected.");
+          console.error("No cameras found.");
         }
-    }).catch(function(e) {
-        alert('Error accessing camera: ' + e);
-        console.error('Error accessing camera: ', e);
-    });
+      })
+      .catch(function (e) {
+        alert("Error accessing camera: " + e);
+        console.error("Error accessing camera: ", e);
+      });
 
     // Function to show the result after scanning
     function showResultSuccess() {
-        document.getElementById('announcement').style.display = 'none';
-        document.getElementById('manual-div').style.display = 'none';
-        document.getElementById('result-success').style.display = 'flex';
-        setTimeout(() => {
-            document.getElementById('result-success').style.display = 'none';
-            document.getElementById('manualInput').value = '';
-            document.getElementById('announcement').style.display = 'flex';
-            document.getElementById('manual-div').style.display = 'flex';
-        }, 3000);
+      document.getElementById("announcement").style.display = "none";
+      document.getElementById("manual-div").style.display = "none";
+      document.getElementById("result-success").style.display = "flex";
+      setTimeout(() => {
+        document.getElementById("result-success").style.display = "none";
+        document.getElementById("manualInput").value = "";
+        document.getElementById("announcement").style.display = "flex";
+        document.getElementById("manual-div").style.display = "flex";
+      }, 3000);
     }
 
     function showResultFailed() {
-        document.getElementById('announcement').style.display = 'none';
-        document.getElementById('manual-div').style.display = 'none';
-        document.getElementById('result-failed').style.display = 'flex';
-        setTimeout(() => {
-            document.getElementById('result-failed').style.display = 'none';
-            document.getElementById('manualInput').value = '';
-            document.getElementById('announcement').style.display = 'flex';
-            document.getElementById('manual-div').style.display = 'flex';
-        }, 3000);
+      document.getElementById("announcement").style.display = "none";
+      document.getElementById("manual-div").style.display = "none";
+      document.getElementById("result-failed").style.display = "flex";
+      setTimeout(() => {
+        document.getElementById("result-failed").style.display = "none";
+        document.getElementById("manualInput").value = "";
+        document.getElementById("announcement").style.display = "flex";
+        document.getElementById("manual-div").style.display = "flex";
+      }, 3000);
     }
-</script>
+  </script>
 </html>
+
