--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -239,8 +239,8 @@
 
     // Get available cameras and start scanning with the back camera if available
     Html5Qrcode.getCameras()
-      .then(function (deviceCameras) {
-        cameras = deviceCameras; // Store the available cameras
+      .then(function (cameraList) {
+        cameras = cameraList; // Store the list of cameras
         if (cameras.length > 0) {
           // Look for the back camera
           let backCamera = cameras.find((cam) =>
@@ -255,7 +255,7 @@
               },
               onScanSuccess,
               onScanFailure,
-            );
+            ); // Start with the back camera if found
           } else {
             html5QrCode.start(
               cameras[0].id,
@@ -265,7 +265,7 @@
               },
               onScanSuccess,
               onScanFailure,
-            ); // If no back camera, use the first camera
+            ); // Use the first camera if no back camera is found
           }
         } else {
           alert("No cameras found. Please ensure your camera is connected.");
@@ -299,7 +299,6 @@
           });
       } else {
         alert("No other cameras found.");
-      j
     }
 
     function showPopupSuccess() {
