Fix missing wording

--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -150,7 +150,7 @@
           onclick="changeCamera()"
           style="flex-grow: 1"
         >
-          j <img src="../img/camera.svg" alt="" /> <a>Change Camera</a>
+          <img src="../img/camera.svg" alt="" /> <a>Change Camera</a>
         </div>
         <div class="buttonPrimary" onclick="window.location.href = 'scan.html'">
           Scan Other Ticket
