--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -247,6 +247,7 @@
             cam.label.toLowerCase().includes("back"),
           );
           if (backCamera) {
+            console.log("back camera")
             html5QrCode.start(
               backCamera.id,
               {
@@ -257,6 +258,7 @@
               onScanFailure,
             ); // Start with the back camera if found
           } else {
+            console.log("front camera")
             html5QrCode.start(
               cameras[0].id,
               {
