--- a/campaign/scan.html
+++ b/campaign/scan.html
@@ -198,17 +198,17 @@
   </body>
   <script>
     let html5QrCode = new Html5Qrcode("preview");
-    let currentCameraIndex = 0;
-    let cameras = [];
+    let currentCameraIndex = 0; // Index for the currently used camera
+    let cameras = []; // Array to store all detected cameras
 
-    // Function to handle QR code scan success
-    function onScanSuccess(decodedText, decodedResult) {
+    // Event listener when a QR code is successfully scanned
+    function onScanSuccess(content) {
       confirmTicket(content);
     }
 
-    // Function to handle scan failure (optional)
+    // Function to handle scan failures (optional)
     function onScanFailure(error) {
-      console.warn(`Code scan error = ${error}`);
+      console.warn(`QR Code scan failed: ${error}`);
     }
 
     async function confirmTicket(ticketCode) {
@@ -230,14 +230,14 @@
         }
         const json = await response.json();
         console.log(json);
-        showPopupSuccess();
+        showResultSuccess(); // Call the result display function
       } catch (error) {
-        showPopupFailed();
+        showResultFailed(); // Call the result display function
         console.error(error.message);
       }
     }
 
-    // Get available cameras and start scanning with the back camera if available
+    // Fetch available cameras and start with the back camera if available
     Html5Qrcode.getCameras()
       .then(function (cameraList) {
         cameras = cameraList; // Store the list of cameras
@@ -247,7 +247,6 @@
             cam.label.toLowerCase().includes("back"),
           );
           if (backCamera) {
-            console.log("back camera")
             html5QrCode.start(
               backCamera.id,
               {
@@ -258,7 +257,6 @@
               onScanFailure,
             ); // Start with the back camera if found
           } else {
-            console.log("front camera")
             html5QrCode.start(
               cameras[0].id,
               {
