--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 </div>
             </div>
         </div>
-        <div class="buttonDiv">
-            <button class="buttonPrimary">Logout</button>
-        </div>
+        <!-- <div class="buttonDiv"> -->
+        <!--     <button class="buttonPrimary">Logout</button> -->
+        <!-- </div> -->
     </main>
     
 </body>
